test/files/ill-typed/6.lam
(0 + (2 - 33 + (let x = 3 in x - (let y = true in if iszero(0) then if y then 1 else 0 else true))))
